# intsys-labs

./: .gitignore  pyproject.toml
journals/: lab4.ipynb
lab1/: main.py
lab2/: README  autograder.py  commands.txt  enemies.py  game.py  grading.py  graphicsDisplay.py  graphicsUtils.py  keyboardAgents.py  main.py  maps.py  pacman.py  pacmanAgents.py  player.py  search.py  searchAgents.py  searchTestClasses.py  util.py
lab3/: main.py
lab4/: main.py  old.py
