[tool.poetry]
name = "intsys-labs"
version = "0.1.0"
description = ""
authors = ["Evgeniy Goncharuck <iterlace.dev@sent.com>"]
readme = "README.md"
packages = [{include = "intsys_labs"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
